<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_instrucoes"
        android:icon="@drawable/ic_instrucoes"
        android:title="@string/menu_instrucoes"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_daily_message"
        android:icon="@drawable/ic_daily_message"
        android:title="@string/menu_daily_message"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_restart"
        android:icon="@drawable/ic_restart"
        android:title="@string/menu_restart"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_historico"
        android:title="@string/menu_historico"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_sobre"
        android:title="@string/menu_sobre"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_sugestao"
        android:title="@string/menu_sugestao"
        app:showAsAction="ifRoom"/>

</menu>